--- a/EployeeDetailManage/src/app/employee/employeelist.component.html
+++ b/EployeeDetailManage/src/app/employee/employeelist.component.html
@@ -1,3 +1,6 @@
-<p>
-  employeelist works!
-</p>
+<div *ngFor = "let item of EmployeeList">
+
+{{item.employeeId}}
+{{item.employeeName}}
+{{item.employeeAge}}
+</div>
